# BitCell

./: .gitignore  .zenodo.json  AGENT_PLAN.md  CHANGELOG.md  CLSAG_IMPLEMENTATION_SUMMARY.md  Cargo.toml  README.md  README.old.md  TODO.md  TODO_OLD.md  bitcell-launcher.sh  check_output.txt  cleanup.sh  test_dht.sh  test_dht_deterministic.sh  test_validator.sh  test_validator_manual.sh  todo_now.md
.github/: copilot-setup-steps.yml
ceremony/: README.md  coordinator_checklist.md  participant_instructions.md
crates/bitcell-admin/: Cargo.toml  README.md
crates/bitcell-admin/src/: audit.rs  auth.rs  config.rs  deployment.rs  faucet.rs  hsm.rs  lib.rs  main.rs  metrics.rs  metrics_client.rs  process.rs  setup.rs  system_metrics.rs
crates/bitcell-admin/src/api/: auth.rs  blocks.rs  config.rs  deployment.rs  explorer.rs  faucet.rs  metrics.rs  mod.rs  nodes.rs  setup.rs  test.rs  wallet.rs
crates/bitcell-admin/src/hsm/: aws.rs  azure.rs  mod.rs  vault.rs
crates/bitcell-admin/src/web/: dashboard.rs  explorer.rs  faucet.rs  mod.rs
crates/bitcell-admin/tests/: auth_integration_tests.rs
crates/bitcell-ca/: Cargo.toml  GPU_ACCELERATION.md  IMPLEMENTATION_SUMMARY.md  README.md
crates/bitcell-ca/benches/: ca_benchmarks.rs  gpu_benchmarks.rs
crates/bitcell-ca/examples/: gpu_demo.rs
crates/bitcell-ca/src/: battle.rs  glider.rs  gpu_tests.rs  grid.rs  lib.rs  rules.rs
crates/bitcell-ca/src/gpu/: cuda.rs  mod.rs  opencl.rs
crates/bitcell-compiler/: Cargo.toml  README.md
crates/bitcell-compiler/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  semantic.rs  stdlib.rs
crates/bitcell-consensus/: Cargo.toml
crates/bitcell-consensus/src/: block.rs  finality.rs  fork_choice.rs  lib.rs  orchestrator.rs  tournament.rs
crates/bitcell-consensus/tests/: finality_integration.rs
crates/bitcell-crypto/: Cargo.toml
crates/bitcell-crypto/benches/: crypto_bench.rs
crates/bitcell-crypto/src/: clsag.rs  commitment.rs  ecvrf.rs  hash.rs  lib.rs  merkle.rs  poseidon.rs  ring.rs  signature.rs  vrf.rs
crates/bitcell-crypto/tests/: security_audit_tests.rs
crates/bitcell-ebsl/: Cargo.toml
crates/bitcell-ebsl/src/: decay.rs  evidence.rs  lib.rs  slashing.rs  trust.rs
crates/bitcell-governance/: Cargo.toml  README.md
crates/bitcell-governance/benches/: governance_bench.rs
crates/bitcell-governance/src/: delegation.rs  execution.rs  guardian.rs  lib.rs  proposal.rs  serde_pubkey.rs  timelock.rs  voting.rs
crates/bitcell-governance/tests/: integration_tests.rs
crates/bitcell-light-client/: Cargo.toml  README.md
crates/bitcell-light-client/examples/: light_client_demo.rs
crates/bitcell-light-client/src/: checkpoints.rs  header_chain.rs  lib.rs  proofs.rs  protocol.rs  sync.rs  wallet.rs
crates/bitcell-network/: Cargo.toml
crates/bitcell-network/src/: lib.rs  messages.rs  peer.rs  transport.rs
crates/bitcell-node/: Cargo.toml
crates/bitcell-node/src/: blockchain.rs  config.rs  dht.rs  governance_rpc.rs  keys.rs  lib.rs  main.rs  miner.rs  network.rs  rpc.rs  tournament.rs  tx_pool.rs  validator.rs  ws.rs  ws.rs.backup
crates/bitcell-node/src/monitoring/: logging.rs  metrics.rs  mod.rs
crates/bitcell-node/tests/: websocket_subscriptions_test.rs
crates/bitcell-simulation/: Cargo.toml
crates/bitcell-simulation/src/: lib.rs
crates/bitcell-state/: Cargo.toml
crates/bitcell-state/benches/: storage_bench.rs
crates/bitcell-state/src/: account.rs  bonds.rs  key_images.rs  lib.rs  storage.rs
crates/bitcell-state/tests/: storage_persistence_test.rs
crates/bitcell-wallet/: Cargo.toml  README.md
crates/bitcell-wallet-gui/: Cargo.toml  README.md
crates/bitcell-wallet-gui/src/: game_viz.rs  main.rs  qrcode.rs  rpc_client.rs
crates/bitcell-wallet-gui/ui/: main.slint
crates/bitcell-wallet-mobile/: Cargo.toml  INTEGRATION.md  KNOWN_ISSUES.md  README.md  build.rs
crates/bitcell-wallet-mobile/src/: backup.rs  biometric.rs  bitcell_wallet_mobile.udl  error.rs  lib.rs  storage.rs  wallet.rs
crates/bitcell-wallet/src/: address.rs  balance.rs  chain.rs  hardware.rs  history.rs  lib.rs  main.rs  mnemonic.rs  transaction.rs  wallet.rs
crates/bitcell-wallet/src/hardware/: ledger.rs  mock.rs  mod.rs  trezor.rs
crates/bitcell-wallet/tests/: bdd_wallet_tests.rs  hardware_wallet_tests.rs  performance_tests.rs  security_tests.rs
crates/bitcell-zkp/: CIRCUIT_IMPLEMENTATION.md  Cargo.toml
crates/bitcell-zkp/benches/: proof_benchmarks.rs
crates/bitcell-zkp/src/: aggregation.rs  battle_circuit.rs  battle_constraints.rs  key_management.rs  lib.rs  merkle_gadget.rs  poseidon_merkle.rs  state_circuit.rs  state_constraints.rs
crates/bitcell-zkvm/: Cargo.toml
crates/bitcell-zkvm/benches/: zkvm_benchmarks.rs
crates/bitcell-zkvm/src/: instruction.rs  interpreter.rs  lib.rs  memory.rs
crates/bitcell-zkvm/tests/: security_audit_tests.rs
docs/: 100_PERCENT_COMPLETION_STRATEGY.md  ADMIN_AUTH.md  ARCHITECTURE.md  BLOCK_EXPLORER.md  BLUESKY_DIRECTIONS.md  CEREMONY.md  CEREMONY_IMPLEMENTATION.md  CLSAG_INTEGRATION.md  COMPLETION_STRATEGY.md  ECVRF_SPECIFICATION.md  EPIC_CLOSURE_CHECKLIST.md  FAUCET.md  FINALITY_GADGET.md  FINALITY_IMPLEMENTATION_SUMMARY.md  FINAL_REPORT.md  GOVERNANCE.md  GOVERNANCE_IMPLEMENTATION_REPORT.md  HARDWARE_WALLET_GUIDE.md  HARDWARE_WALLET_IMPLEMENTATION.md  HOLISTIC_VERIFICATION.md  HSM_INTEGRATION.md  IMPLEMENTATION_SPEC.md  IMPLEMENTATION_SUMMARY.md  ISSUE_75_EVALUATION_COMPLETE.md  LIBP2P_INTEGRATION.md  LIGHT_CLIENT_IMPLEMENTATION.md  MII+.md  OPERATIONAL_MATRIX.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_INDEX.md  PHASE_3_VALIDATION_REPORT.md  PRE_AUDIT_SECURITY_REPORT.md  PROOF_AGGREGATION.md  RC-1-Release_Notes.md  RC3_IMPLEMENTATION_ROADMAP.md  RC3_PHASE4_EPIC.md  RC3_PLANNING_INDEX.md  RC3_QUICK_REFERENCE.md  RC3_READINESS_REPORT.md  (+28 more)
examples/: faucet.env  faucet_admin.rs
infra/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  TESTING_RESULTS.md
keys/: .gitignore  README.md
scripts/: test_fullnode.sh  test_miner.sh  validate-infrastructure.sh
sdk/: README.md  SUMMARY.md
(+100 files in other folders)
