[workspace]
members = [
    "crates/bitcell-crypto",
    "crates/bitcell-zkp",
    "crates/bitcell-ca",
    "crates/bitcell-ebsl",
    "crates/bitcell-consensus",
    "crates/bitcell-state",
    "crates/bitcell-zkvm",
    "crates/bitcell-economics",
    "crates/bitcell-network",
    "crates/bitcell-node",
    "crates/bitcell-admin",
    "crates/bitcell-simulation",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Oliver Hirst"]
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Steake/BitCell"

[workspace.dependencies]
# Arkworks ecosystem for ZK-SNARKs
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-groth16 = "0.4"
ark-bn254 = "0.4"
ark-bls12-381 = "0.4"
ark-crypto-primitives = "0.4"

# Cryptography
sha2 = "0.10"
blake3 = "1.5"
curve25519-dalek = "4.1"
ed25519-dalek = "2.1"
k256 = { version = "0.13.3", features = ["ecdsa", "sha256"] }
rand = "0.8"
rand_core = "0.6"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking
tokio = { version = "1.35", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "kad"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"

# Utilities
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1.8"
dashmap = "5.5"
bytes = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
