[package]
name = "bitcell-admin"
version = "0.1.0"
edition = "2021"
authors = ["BitCell Contributors"]
description = "Administrative console and dashboard for BitCell blockchain"

[features]
default = []
# Enable insecure transaction signing endpoint that accepts private keys via HTTP.
# WARNING: This should NEVER be enabled in production environments.
insecure-tx-signing = []
# HSM provider features
vault = ["vaultrs"]
aws-hsm = ["aws-sdk-kms", "aws-config"]
azure-hsm = ["azure_security_keyvault", "azure_identity", "azure_core"]

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Async runtime
tokio = { version = "1.0", features = ["full", "sync"] }
async-trait.workspace = true

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Templating
tera = "1.19"

# HTTP client (for calling node APIs)
reqwest = { version = "0.11", features = ["json"] }

# Metrics
prometheus-client = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System metrics
sysinfo = "0.30"

# Hex encoding
hex = "0.4"

# Base64 encoding (for Vault backend)
base64 = "0.21"

# Async streams (for Azure backend)
futures = "0.3"

# Error handling
thiserror.workspace = true

# Wallet support
bitcell-wallet = { path = "../bitcell-wallet" }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Sync primitives
parking_lot = "0.12"

# JWT and authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# BitCell dependencies
bitcell-node = { path = "../bitcell-node" }
bitcell-consensus = { path = "../bitcell-consensus" }
bitcell-state = { path = "../bitcell-state" }
bitcell-network = { path = "../bitcell-network" }
bitcell-crypto = { path = "../bitcell-crypto" }
bitcell-ca = { path = "../bitcell-ca" }

# HSM providers (optional)
vaultrs = { version = "0.7", optional = true }
aws-sdk-kms = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }
azure_security_keyvault = { version = "0.20", optional = true }
azure_identity = { version = "0.20", optional = true }
azure_core = { version = "0.20", optional = true }

# Unix process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
