[package]
name = "bitcell-ca"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

