[package]
name = "bitcell-ca"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
rayon.workspace = true

# GPU acceleration dependencies (optional)
opencl3 = { version = "0.9", optional = true }
cudarc = { version = "0.12", features = ["cuda-12050"], optional = true }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[features]
default = []
cuda = ["cudarc"]
opencl = ["opencl3"]
gpu = ["opencl"]  # Default GPU support uses OpenCL for broad compatibility

