[package]
name = "bitcell-compiler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitcell-zkvm = { path = "../bitcell-zkvm" }
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
