[package]
name = "bitcell-governance"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitcell-crypto = { path = "../bitcell-crypto" }
bitcell-state = { path = "../bitcell-state" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bincode.workspace = true
tracing.workspace = true
hex.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile = "3.23.0"

[[bench]]
name = "governance_bench"
harness = false
