[package]
name = "bitcell-light-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
bitcell-consensus = { path = "../bitcell-consensus" }
bitcell-crypto = { path = "../bitcell-crypto" }
bitcell-network = { path = "../bitcell-network" }

# Serialization
serde = { workspace = true }
bincode = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tracing-subscriber = { workspace = true }
