[package]
name = "bitcell-network"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitcell-crypto = { path = "../bitcell-crypto" }
bitcell-consensus = { path = "../bitcell-consensus" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
libp2p.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"
