[package]
name = "bitcell-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bitcell-node"
path = "src/main.rs"

[dependencies]
bitcell-crypto = { path = "../bitcell-crypto" }
bitcell-ca = { path = "../bitcell-ca" }
bitcell-consensus = { path = "../bitcell-consensus" }
bitcell-state = { path = "../bitcell-state" }
bitcell-network = { path = "../bitcell-network" }
bitcell-ebsl = { path = "../bitcell-ebsl" }
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
bincode = "1.3"
parking_lot = "0.12"

[dev-dependencies]
proptest.workspace = true
