[package]
name = "bitcell-wallet-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform native GUI for BitCell wallet using Slint"

[[bin]]
name = "bitcell-wallet-gui"
path = "src/main.rs"

[dependencies]
bitcell-wallet = { path = "../bitcell-wallet" }
bitcell-crypto = { path = "../bitcell-crypto" }

# Slint UI framework - native rendering, no WebView
slint = "1.9"

# Serialization
serde.workspace = true
serde_json = "1.0"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

[build-dependencies]
slint-build = "1.9"

[features]
default = []
