[package]
name = "bitcell-wallet-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform native GUI for BitCell wallet using Slint"

[[bin]]
name = "bitcell-wallet-gui"
path = "src/main.rs"

[dependencies]
bitcell-wallet = { path = "../bitcell-wallet" }
bitcell-crypto = { path = "../bitcell-crypto" }
bitcell-consensus = { path = "../bitcell-consensus" }

# Slint UI framework - native rendering, no WebView
slint = "1.9"

# Serialization
serde.workspace = true
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime and HTTP client for RPC
tokio = { workspace = true, features = ["rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UI Extras
qrcodegen = "1.8"

# Hex encoding
hex = "0.4"

[build-dependencies]
slint-build = "1.9"

[features]
default = []
